--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/minimist": "^1.2.5",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "minimist": "^1.2.8"
+  }
 }
